# crop_pdf

./: README.md  crop.py  pyproject.toml  requirements.txt  setup.py
croppdf/: crop.py
tests/: __init__.py  test.py
