[tool.poetry]
name = "crop-pdf"
version = "2024.04.3"
description = ""
authors = ["kompre <s.follador@gmail.com>"]
readme = "README.md"
packages = [{include = "croppdf"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
pypdf = "^4.2.0"
pymupdf = "^1.24.1"
pdfcropmargins = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crop = "croppdf.crop:crop_pdf"